[tool.poetry]
name = "misi-hijau"
version = "0.1.0"
description = "Misi Hijau adalah permainan petualangan retro tentang edukasi energi terbarukan."
authors = ["Cikitta W. Tjok <daringcuteseal@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "misi_hijau"}]

[tool.poetry.dependencies]
python = "^3.10"
pyxel = "^1.9.12"
pyxelunicode = "^1.0.4"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
